[project]
name = "zfssdr"
version = "0.1.0"
description = "ZFS dataset Snapshot, Destroy, Rollback automation in Python"
authors = [
    { name = "meliber", email = "bigwhitely@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
